kubernetes/go-rest-service-example/templates/rest-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-rest-example-service
spec:
  selector:
    app: go-rest-example-deployment
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
