kubernetes/go-rest-service-example/templates/ingress.yml
  
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-example-ingress
spec:
  backend:
    serviceName: go-rest-example-service
    servicePort: 80
